<resources>
    <string name="app_name">Body Fit</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre">Nombre y Apellido</string>
    <string name="correo">Correo</string>
    <string name="contrasenia_2">Confirmar Contraseña</string>
    <string name="maquina_menu">MÁQUINAS</string>
    <string name="historial_menu">HISTORIAL</string>
    <string name="comida_menu">NUTRICIÓN</string>
    <string name="rutina_menu">RUTINAS</string>
    <string name="ubicacioon">UBICACIÓN</string>
    <string name="horario">HORARIOS</string>
    <string name="horario1">Lunes - Viernes 8:00-9:00</string>
    <string name="horario2">Sabados 9:00-14:00</string>
    <string name="instructores">INSTRUCTORES</string>
    <string name="instructor1">SERGIO SANCHEZ</string>
    <string name="instructor2">NINOSKA SANCHEZ</string>
    <string name="calculadora">CALCULADORA CALÓRICA</string>
    <string name="genero">GÉNERO</string>
    <string name="genero1">MASCULINO</string>
    <string name="genero2">FEMININO</string>
    <string name="edad_con">EJ: 19</string>
    <string name="edad">EDAD</string>
    <string name="peso_con">PESO</string>
    <string name="peso">EJ: 60(kg)</string>
    <string name="estatura">ESTATURA</string>
    <string name="estatura_con">EJ: 165(cm)</string>
    <string name="actividad">ACTIVIDAD</string>
    <string name="activida_con">EJ: 165(cm)</string>
    <string name="pecho_menu">PECHO</string>
    <string name="hombros_menu">HOMBROS</string>
    <string name="piernas_menu">PIERNAS</string>
    <string name="espalda_menu">ESPALDA</string>
    <string name="brazos_menu">BRAZOS</string>
    <string name="abdominal_menu">ABDOMINALES</string>
    <string name="calcular">Calcular</string>
    <string name="actividad1">Activida Semanal</string>
    <string-array name="actividad_drop">
        <item>Sedentario</item>
        <item>Poco activo</item>
        <item>Activo con moderación</item>
        <item>Activo </item>
        <item>Muy activo</item>
    </string-array>

    <string name="perder_peso">PERDER PESO</string>
    <string name="ganar_musculo">GANAR MASA MUSCULAR</string>
    <string name="ganar_fuerza">GANAR FUERZA</string>
    <string name="mantener">MANTENER PESO</string>
    <string name="actividad2">Actividad Fisica</string>
    <string name="DESAYUNO">DESAYUNO</string>
    <string name="ALMUERZO">ALMUERZO</string>
    <string name="CENA">CENA</string>
    <string name="CALCULADORA_CALORICA">CALCULADORA CALORICA</string>
    <string name="resultado">RESULTADO CALORICO</string>
    <string name="volver_comidas">VOLVER A NUTRICION</string>
    <string name="nombre_user">NOMBRE: </string>
    <string name="usuario1">USUARIO</string>
    <string name="mes">MES</string>
    <string name="rutinas_add">AÑADIR RUTINA</string>
    <string name="ini_rutina">NOMBRE EJERCICIO/ REP / SER / PESO</string>
    <string name="guardar_rut">Guardar Rutina</string>
    <string name="ejercios_add">Agregar Ejercicio</string>
    <string name="descripcion_ejercicio">DESCRIPCION</string>
    <string name="Ingredientes">Ingredientes</string>
    <string name="Preparación">Preparación</string>
    <string name="Máquinas">Máquinas</string>
    <string name="Nutrición">Nutrición</string>
    <string name="Rutinas">Rutinas</string>
    <string name="Historial">Historial</string>
    <string name="acerca_de">acerca de</string>
    <string name="Cerrar_sesion">Cerrar Sesión</string>
    <string name="Body_Fit">Body Fit</string>
    <string name="Funciones">Funciones</string>
    <string name="Informacion">Información</string>
    <string name="Opciones_de_Usuario">Opciones de Usuario</string>
    <string name="gimnasio">Gimnasio</string>
</resources>