<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_marino"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".CalculadoraActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_barra"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/naranja">

        <Button
            android:id="@+id/button_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/menu_icon"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_user"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/user_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/ubicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:paddingHorizontal="8dp"
        app:cardCornerRadius="11500dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/rojo"
            android:paddingHorizontal="8dp"
            android:text="@string/calculadora"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/genero"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/masculino1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/white"
                android:drawableTop="@drawable/masculino"
                android:padding="16dp"
                android:text="@string/genero1"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/edad"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="64dp">

                <EditText
                    android:id="@+id/edad_cal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/edad_con"
                    android:inputType="number"
                    android:maxLength="16"
                    android:paddingStart="8dp"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/peso_con"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="64dp">

                <EditText
                    android:id="@+id/peso_cal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/peso"
                    android:inputType="number"
                    android:maxLength="16"
                    android:paddingStart="8dp"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/femenino1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableTop="@drawable/femenino"
                android:padding="16dp"
                android:text="@string/genero2"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/estatura"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="64dp">

                <EditText
                    android:id="@+id/estatura_cal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/estatura_con"
                    android:inputType="number"
                    android:maxLength="16"
                    android:paddingStart="8dp"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/actividad"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/opciones"
                android:layout_width="120dp"
                android:layout_height="28dp"
                android:hint="@string/actividad2"
                android:background="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:id="@+id/actividad_fisica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                    android:focusableInTouchMode="false"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </LinearLayout>
    <Button
        android:id="@+id/calcular_cal"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:backgroundTint="@color/rojo"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:src="@drawable/gym_logo"
        />

</LinearLayout>