<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_marino"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_barra"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/naranja">


        <Button
            android:id="@+id/button_user"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/user_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/maquinas"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@android:color/transparent"
                android:drawableTop="@drawable/maquina"
                android:text="@string/maquina_menu"
                android:textSize="18sp"
                />

            <Button
                android:id="@+id/nutricion"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@android:color/transparent"
                android:drawableTop="@drawable/comida"
                android:text="@string/comida_menu"
                android:textSize="18sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/historial"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@android:color/transparent"
                android:drawableTop="@drawable/historial"
                android:text="@string/historial_menu"
                android:textSize="18sp"
                />


            <Button
                android:id="@+id/rutinas"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@android:color/transparent"
                android:drawableTop="@drawable/rutina"
                android:text="@string/rutina_menu"
                android:textSize="18sp"
                />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/gym_logo" />

    <Button
        android:id="@+id/acerca_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cyan"
        android:text="@string/acerca_de"
        android:textSize="20sp"
        android:backgroundTint="@android:color/transparent"
        />


</LinearLayout>