<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_marino"
    tools:context=".SignUpActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/naranja"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="50dp"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/user_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/usuario"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:maxLength="16"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/nombre_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:maxLength="24"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/correo_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/contra_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/contrasenia"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:maxLength="16"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/contra_edit_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/contrasenia_2"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:maxLength="16"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/crear_cuenta"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:text="@string/crear_cuenta"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:backgroundTint="@color/rojo"
                    />




        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/gym_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>