<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@color/azul_marino"
    tools:context=".CalculadoraResultadoActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_barra"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/naranja">

        <Button
            android:id="@+id/button_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/menu_icon"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_user"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/user_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="70dp"
        android:layout_marginVertical="8dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@color/azul"
            android:text="@string/resultado"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:background="@color/cyan"
            android:layout_width="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/perder_peso"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perder_peso"
                android:textColor="@color/black"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/perder_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="129dp"
                android:layout_height="118dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ganar_musculo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ganar_musculo"
                android:textColor="@color/black"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/ganar_musculo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:background="@color/cyan"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ganar_fuerza"
                android:layout_marginBottom="12dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ganar_fuerza"
                android:textColor="@color/black"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/ganar_fuerza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:src="@drawable/mantenerse" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mantener"
                android:textColor="@color/black"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/mantenerse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/volver_comidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rojo"
        android:layout_marginTop="16dp"
        android:text="@string/volver_comidas"/>
</LinearLayout>